# jelly-swipe

./: .all-contributorsrc  .coverage  .coverage.ai-dev-env.pid684817.XBD8lQ9x.HwNLJ0YXeqlh  .coverage.ai-dev-env.pid684823.XalakOCx.H0Zcu4WQIw8h  .coverage.ai-dev-env.pid684826.XwOsWtax.H8n6XrBZvhAh  .coverage.ai-dev-env.pid684839.XKQaGF3x.HjF6wdia41Lh  .dockerignore  .gitignore  .opencode  .pre-commit-config.yaml  AGENTS.md  AI_POLICY.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  LICENSE  ORCH_DISPATCH_ORCH-002.md  ORCH_DISPATCH_ORCH-004.md  README.md  alembic.ini  app.py  docker-compose.yml  docker-entrypoint.sh  opencode.json  pyproject.toml  release-please-config.json  requirements.txt  review_comment.md
.github/: dependabot.yml
.orchestra/: state.db
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.6-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md
.serena/: project.yml
alembic/: env.py
data/: index.html
docs/: sse-events.md
frontend/: App.jsx  App.tsx  Header.jsx  Header.test.tsx  Header.tsx  HostModal.jsx  HostModal.test.tsx  HostModal.tsx  Intro.jsx  Intro.test.tsx  Intro.tsx  JoinModal.jsx  JoinModal.test.tsx  JoinModal.tsx  Main.jsx  Main.test.tsx  Main.tsx  MovieCard.jsx  MovieCard.test.tsx  MovieCard.tsx  README.md  RoomContextProvider.tsx  SwipePage.jsx  SwipePage.test.tsx  SwipePage.tsx  api.js  api.test.js  assets.d.ts  colors.txt  index.html  index.jsx  index.tsx  package-lock.json  package.json  style.css  tsconfig.json  types.ts  vite.config.js
jellyswipe/: __init__.py  app_config.py  auth.py  auth_types.py  base.py  bootstrap.py  config.py  db.py  db_paths.py  db_runtime.py  db_uow.py  dependencies.py  factory.py  http_client.py  jellyfin_library.py  jellyfin_media_item.py  migrations.py  notifier.py  plex_library.py  rate_limiter.py  room_types.py  ssrf_validator.py  tmdb.py
media_provider/: __init__.py  base.py  factory.py  jellyfin_library.py  plex_library.py
scripts/: lint-unraid-template.py  phase40_val04_guard.sh
static/: manifest.json
templates/: index.html
tests/: conftest.py  test_app_config.py  test_auth.py  test_bootstrap.py  test_commit_and_wake.py  test_db.py  test_db_runtime.py  test_dependencies.py  test_error_handling.py  test_http_client.py  test_infrastructure.py  test_jellyfin_library.py  test_jellyfin_media_item.py  test_migration_23.py  test_migrations.py  test_models_metadata.py  test_notifier.py  test_openapi_metadata.py  test_rate_limiter.py  test_rate_limiting.py  test_repositories.py  test_room_lifecycle.py  test_route_authorization.py  test_routes_auth.py  test_routes_health.py  test_routes_media.py  test_schemas.py  (+15 more)
(+587 files in other folders)
