[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jellyswipe"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "flask>=3.1.3",
    "gevent>=24.10",
    "gunicorn>=25.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "werkzeug>=3.1.8",
]

[tool.hatch.build.targets.wheel.shared-data]
"jellyswipe/templates" = "jellyswipe/templates"
"jellyswipe/static" = "jellyswipe/static"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
