[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jellyswipe"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.136.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.18",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.46.0",
]

[tool.hatch.build.targets.wheel.shared-data]
"jellyswipe/templates" = "jellyswipe/templates"
"jellyswipe/static" = "jellyswipe/static"

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=jellyswipe --cov-report=term-missing"
