[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jellyswipe"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.1",
    "greenlet>=3.2.4",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.18",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.4.1",
    "uvicorn[standard]>=0.46.0",
]

[tool.hatch.build.targets.wheel.shared-data]
"jellyswipe/templates" = "jellyswipe/templates"
"jellyswipe/static" = "jellyswipe/static"

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.15.12"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=jellyswipe --cov-report=term-missing"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
